feat(application-server): implement workspace entity extensions and CRUD API (#408, #416) (#541)
Co-authored-by: Dmytro Dmukh <dmytro.dmukh@tum.de>
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Co-authored-by: Felix T.J. Dietrich <felix_dietrich@gmx.de>